--- a/Views/Home/Contact.cshtml
+++ b/Views/Home/Contact.cshtml
@@ -4,7 +4,7 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<p> Contact page</p>
+<p> Contact page 30/07/2021</p>
 <address>
     One Microsoft Way<br />
     Redmond, WA 98052-6399<br />
