--- a/Views/Home/Contact.cshtml
+++ b/Views/Home/Contact.cshtml
@@ -5,6 +5,7 @@
 <h3>@ViewBag.Message</h3>
 
 <p> Contact page 30/07/2021</p>
+<p>Hello</p>
 <address>
     One Microsoft Way<br />
     Redmond, WA 98052-6399<br />
